--- a/src/styles.css
+++ b/src/styles.css
@@ -9,9 +9,18 @@
   cursor: pointer;
 }
 
+.sidebar-nav ul li a.active, .sidebar-nav ul li .adashboard a:hover {
+  color: #007bff;
+}
+
 #google-btn {
   align-items: center;
   display: flex;
   justify-content: center;
   text-align: center;
+}
+
+.img-avatar {
+  height: 200px;
+  width: 200px;
 }
